# bh-2024-backend

./: .gitignore  README.md  pyproject.toml
src/gui/: main.py
src/spyware/: keylogger.py  main.py  queues.py  screenshot.py
